<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@drawable/wallpaper2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rodrigo.sdm.com.pract3sdm.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPlay"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:onClick="lanzarIntent"
            android:textSize="55sp"
            android:fontFamily="sans-serif-black"
            android:textColor="#0d5383"
            android:layout_height="match_parent"
            android:text="@string/buttonPlay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonScores"
            android:layout_width="match_parent"
            android:onClick="lanzarIntent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:textSize="55sp"
            android:textColor="#0d5383"
            android:text="@string/buttonScores" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.33"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/buttonSettings"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:textSize="55sp"
            android:layout_width="match_parent"
            android:onClick="lanzarIntent"
            android:textColor="#0d5383"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/buttonSettings"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
